# GraphicsMidTerm

./: CMakeLists.txt
src/: CApp.cpp  CApp.hpp  camera.cpp  camera.hpp  image.cpp  image.hpp  light.cpp  light.hpp  main.cpp  object.cpp  object.hpp  pointlight.cpp  pointlight.hpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  transform.cpp  transform.hpp  vec3.cpp  vec3.hpp
src/experimental/: transform.hpp
